# gradescope_autograde

./: .gitignore  README.md  pyproject.toml
.opencode/plans/: gradescope-autograde-plan.md
config/: config.example.yaml
config/rubrics/: default_rubric.yaml  generated_8172869.yaml  hw10_generated.yaml
docs/: RESEARCH.md  manual.tex
prompts/: chat_context.md  grading_multimodal.txt  grading_system.txt
src/gradescope_autograde/: __init__.py  config.py
src/gradescope_autograde/cli/: __init__.py  main.py
src/gradescope_autograde/client/: __init__.py  browser.py  client.py  parser.py  ratelimit.py
src/gradescope_autograde/grader/: __init__.py  engine.py  latex_parser.py  pdf_parser.py  review.py  rubric_generator.py  rubric_parser.py
src/gradescope_autograde/grader/providers/: __init__.py  base.py  lmstudio.py  opencode_go.py  registry.py
src/gradescope_autograde/gui/: __init__.py  app.py
src/gradescope_autograde/lmstudio/: __init__.py  manager.py
src/gradescope_autograde/models/: __init__.py  assignment.py  course.py  grade_result.py  pdf_question.py  provider.py  review.py  rubric.py  submission.py
src/gradescope_autograde/transport/: __init__.py  exceptions.py  session.py
src/gradescope_autograde/tui/: __init__.py  app.py
src/gradescope_autograde/tui/screens/: __init__.py  assignment_select.py  chat_screen.py  config_screen.py  course_select.py  grading_screen.py  results_screen.py  rubric_screen.py
src/gradescope_autograde/tui/widgets/: __init__.py  model_selector.py
src/gradescope_autograde/utils/: file_picker.py  opencode_utils.py
src/gradescope_autograde/workflow/: __init__.py  export.py  pipeline.py  tracker.py
tests/: conftest.py
tests/unit/: test_config.py  test_models.py  test_review_queue.py  test_rubric_parser.py
