[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gradescope-autograde"
version = "0.1.0"
description = "AI-powered automated grading assistant for Gradescope — fetch submissions, grade with LLMs, upload scores"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.11"
authors = [
    {name = "TA Team", email = "116373901+tzhazuma@users.noreply.github.com"},
]
keywords = ["gradescope", "grading", "llm", "automation", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "openai>=1.0",
    "rich>=13.0",
    "click>=8.0",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
    "textual>=0.80",
    "nicegui>=2.0",
    "psutil>=5.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.45",
    "browser-use>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
gs-autograde = "gradescope_autograde.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/gradescope_autograde"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
